objects/FSL__Polygon__c.object
<CustomObject>
    <label>Map Polygon</label>
    <nameField>
        <label>Polygon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Polygons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>FSL__KML__c</fullName>
        <label>KML Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Color__c</fullName>
        <label>Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Ma_La__c</fullName>
        <label>Maximum Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Ma_Lo__c</fullName>
        <label>Maximum Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Mi_La__c</fullName>
        <label>Minimum Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Mi_Lo__c</fullName>
        <label>Minimum Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Polygons</relationshipLabel>
        <relationshipName>Polygons</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>FSL__Polygon_Color_HEX_Format</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(FSL__Color__c)) &amp;&amp; (NOT(REGEX(FSL__Color__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
        <errorDisplayField>FSL__Color__c</errorDisplayField>
        <errorMessage>Polygon color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
    </validationRules>
</CustomObject>